--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,5 @@
     <string name="dice">Dice</string>
     <string name="correct">Correct</string>
     <string name="incorrect">incorrect</string>
-    <string name="tvLast_trow">Last Throw: %d</string>
+    <string name="tvLast_throw">Last Throw: %d</string>
 </resources>
